little style fix on tablet and desktop

--- a/src/components/UserPanel/UserPanel.module.css
+++ b/src/components/UserPanel/UserPanel.module.css
@@ -4,6 +4,7 @@
     height: 100%;
     width: 100%;
     color: var(--color-text-secondary);
+    
     @media screen and (min-width: 1280px) {
       flex-direction: row;
     }
@@ -19,6 +20,8 @@
       gap: 40px;
       height: 35%;
       width: 100%;
+      padding: 0;
+      margin: 0 auto;
     }
   
     @media screen and (min-width: 1280px) {
@@ -29,6 +32,8 @@
       gap: 28px;
       height: 100%;
       width: 43vw;
+      padding: 0;
+      margin: 0;
     }
   }
   
@@ -52,7 +57,17 @@
       backdrop-filter: blur(5px);
     }
   }
-  
+  .header {
+    width: 100%;
+    padding: 10px;
+    margin: 10px auto;
+  }
+  .paragraph {
+    width: 100%;
+    padding: 5px;
+    margin: 5px auto;
+  }
+
   .img {
     width: 274px;
     height: 250px;
@@ -93,5 +108,6 @@
   .container_input {
     display: flex;
     justify-content: center;
-    margin: 30px 40px;
+    align-items: center;
+    margin: 30px 10px;
   }
